--- a/spazarcade/contact.html
+++ b/spazarcade/contact.html
@@ -57,7 +57,7 @@
     <!-- Main Content Area -->
     <main class="container my-5 bg-red pb-3 rounded-form">
         <h2 class="text-dark-blue m-0 p-0 display-2 shadow-text text-center">Contact Us</h2>
-        <form action="submit">
+        <form autocomplete="off">
             <label for="fname" class="text-dark-blue small-shadow">First Name</label>
             <input type="text" id="fname" name="firstname" placeholder="Your name.." class="default-font">
 
