--- a/spazarcade/contact.html
+++ b/spazarcade/contact.html
@@ -67,7 +67,7 @@
             <label for="subject" class="text-dark-blue small-shadow">Comment / Question</label>
             <textarea id="subject" name="subject" placeholder="Type here.." style="height:200px" class="default-font"></textarea>
 
-            <input type="submit" value="Submit">
+            <button class="contact-btn" onclick="alert('Sent! Thank you!')">Send</button>
         </form>
     </main>
 
